# nvirosense

./: .gitignore  Makefile  README.md  data.ipynb  global.json  import.ipynb  main.py  pyproject.toml  readings.ipynb  requirements.txt  willow_creek_weather.ipynb
.streamlit/: config.toml
data/: devices.json
functions/: auth.py  data.py  fetch.py
misc/nvirosense-notebook-generator/src/: devices.py  utils.py
notebooks/: aquanet_light_sensor.ipynb  aquanet_temp_rh.ipynb  aquanet_wind.ipynb  combine.ipynb  live-1.ipynb  willow_creek_weather.ipynb
nviro_data/: data.py  django.py  fetch.py  readings.py
nvirosense-notebook-generator/: README.md  requirements.txt
nvirosense-notebook-generator/data/: devices.json
nvirosense-notebook-generator/src/: env.py  readings.py
src/: chill_units.py  common.py  data.py  devices.py  env.py  fetch.py  files.py  readings.py
src/nviro_data/: fetch.py
src/nvirosense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit/: example.py  index.py  index1.py
streamlit/components/: custom.py  date_selection.py
streamlit/pages/: chill.py  historic.py  import.py  live.py  style.css
