[project]
name = "nvirosense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "requests>=2.32.4",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-navigation-bar>=3.3.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "streamlit>=1.45.1",
]
[tool.uv]
package = true
